# bazel-builds

./: BUILD.bazel  BUILD_INFO  package.json
docs/: BUILD.bazel
src/: BUILD.bazel  esm5.bzl  ng_rollup_bundle.bzl
src/ng_package/: BUILD.bazel  ng_package.bzl
src/ngc-wrapped/: BUILD.bazel
src/protractor/: protractor_web_test.bzl
test/ng_package/: BUILD.bazel
test/ng_package/example/: BUILD.bazel  package.json
test/ng_package/example/secondary/: BUILD.bazel
test/ngc-wrapped/: BUILD.bazel  tsconfig_template.ts
test/ngc-wrapped/empty/: BUILD.bazel
test/protractor/: BUILD.bazel
test/protractor-2/: BUILD.bazel
