load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")
load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")

ts_library(
    name = "ngc_lib",
    srcs = [
        "extract_i18n.ts",
        "index.ts",
    ],
    module_name = "@angular/bazel",
    node_modules = "@ngdeps//typescript:typescript__typings",
    tsconfig = ":tsconfig.json",
    visibility = [
        "//packages/bazel:__pkg__",
        "//test/ngc-wrapped:__subpackages__",
    ],
    deps = [
        "@ngdeps//@bazel/typescript",
        "@ngdeps//@types/node",
        "@ngdeps//tsickle",
        "@ngdeps//typescript",
    ],
)

nodejs_binary(
    name = "ngc-wrapped",
    configuration_env_vars = ["compile"],
    data = [
        ":ngc_lib",
        "@build_bazel_rules_typescript//third_party/github.com/bazelbuild/bazel/src/main/protobuf:worker_protocol.proto",
        "@ngdeps//source-map-support",
        "@ngdeps//tslib",
    ],
    entry_point = "angular/src/ngc-wrapped/index.js",
    visibility = ["//visibility:public"],
)

nodejs_binary(
    name = "xi18n",
    data = [
        ":ngc_lib",
        "@ngdeps//source-map-support",
    ],
    entry_point = "angular/src/ngc-wrapped/extract_i18n.js",
    visibility = ["//visibility:public"],
)
